// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtAccordion Snap render AtAccordion -- props icon 1`] = `
<div
  class="at-accordion"
>
  <div
    class="at-accordion__header"
  >
    <span
      class="at-icon at-icon-chevron-down at-accordion__icon"
      style="color: red;"
    />
    <div
      class="at-accordion__info"
    >
      <div
        class="at-accordion__info__title"
      />
      <div
        class="at-accordion__info__note"
      />
    </div>
    <div
      class="at-accordion__arrow"
    >
      <span
        class="at-icon at-icon-chevron-down"
      />
    </div>
  </div>
  <div
    class="at-accordion__content at-accordion__content--inactive"
  >
    <div
      class="at-accordion__body"
      id="at-accordion__body-FHJLNPBD"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`AtAccordion Snap render AtAccordion -- props note 1`] = `
<div
  class="at-accordion"
>
  <div
    class="at-accordion__header"
  >
    <div
      class="at-accordion__info"
    >
      <div
        class="at-accordion__info__title"
      />
      <div
        class="at-accordion__info__note"
      >
        note
      </div>
    </div>
    <div
      class="at-accordion__arrow"
    >
      <span
        class="at-icon at-icon-chevron-down"
      />
    </div>
  </div>
  <div
    class="at-accordion__content at-accordion__content--inactive"
  >
    <div
      class="at-accordion__body"
      id="at-accordion__body-EGIKMOAC"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`AtAccordion Snap render AtAccordion -- props open 1`] = `
<div
  class="at-accordion"
>
  <div
    class="at-accordion__header"
  >
    <div
      class="at-accordion__info"
    >
      <div
        class="at-accordion__info__title"
      />
      <div
        class="at-accordion__info__note"
      />
    </div>
    <div
      class="at-accordion__arrow at-accordion__arrow--folded"
    >
      <span
        class="at-icon at-icon-chevron-down"
      />
    </div>
  </div>
  <div
    class="at-accordion__content"
  >
    <div
      class="at-accordion__body"
      id="at-accordion__body-FHJLNPBD"
    />
  </div>
</div>
`;

exports[`AtAccordion Snap render AtAccordion -- props title 1`] = `
<div
  class="at-accordion"
>
  <div
    class="at-accordion__header"
  >
    <div
      class="at-accordion__info"
    >
      <div
        class="at-accordion__info__title"
      >
        title
      </div>
      <div
        class="at-accordion__info__note"
      />
    </div>
    <div
      class="at-accordion__arrow"
    >
      <span
        class="at-icon at-icon-chevron-down"
      />
    </div>
  </div>
  <div
    class="at-accordion__content at-accordion__content--inactive"
  >
    <div
      class="at-accordion__body"
      id="at-accordion__body-FHJLNPBD"
    />
  </div>
</div>
`;

exports[`AtAccordion Snap render AtIcon -- props icon prefixClass 1`] = `
<div
  class="at-accordion"
>
  <div
    class="at-accordion__header"
  >
    <span
      class="prefixClass prefixClass-star at-accordion__icon"
      style="color: red;"
    />
    <div
      class="at-accordion__info"
    >
      <div
        class="at-accordion__info__title"
      />
      <div
        class="at-accordion__info__note"
      />
    </div>
    <div
      class="at-accordion__arrow"
    >
      <span
        class="at-icon at-icon-chevron-down"
      />
    </div>
  </div>
  <div
    class="at-accordion__content at-accordion__content--inactive"
  >
    <div
      class="at-accordion__body"
      id="at-accordion__body-FHJLNPAC"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`AtAccordion Snap render initial AtAccordion 1`] = `
<div
  class="at-accordion"
>
  <div
    class="at-accordion__header"
  >
    <div
      class="at-accordion__info"
    >
      <div
        class="at-accordion__info__title"
      />
      <div
        class="at-accordion__info__note"
      />
    </div>
    <div
      class="at-accordion__arrow"
    >
      <span
        class="at-icon at-icon-chevron-down"
      />
    </div>
  </div>
  <div
    class="at-accordion__content at-accordion__content--inactive"
  >
    <div
      class="at-accordion__body"
      id="at-accordion__body-FHJLNPBD"
    />
  </div>
</div>
`;
